[gd_scene load_steps=9 format=2]

[ext_resource path="res://Nodes/Characters/GenericCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Characters/Enemies/GroundShooter.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Enemies/AirShooterH/adler.png.png" type="Texture" id=3]
[ext_resource path="res://Nodes/Combat/genericShooter.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.9791, 21.8358 )

[sub_resource type="CapsuleShape2D" id=3]
height = 127.53

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14.9239, 22.0523 )

[node name="GroundShooter" type="Node2D"]

[node name="GenericCharacter" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="GenericCharacter" index="0"]
scale = Vector2( 0.182321, 0.101625 )
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" parent="GenericCharacter" index="1"]
shape = SubResource( 2 )

[node name="FreeDeadNode" type="Timer" parent="GenericCharacter"]
one_shot = true

[node name="Shoot" type="Timer" parent="GenericCharacter"]
wait_time = 0.5
autostart = true

[node name="PlayerDetector" type="Area2D" parent="GenericCharacter"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenericCharacter/PlayerDetector"]
position = Vector2( -75.0816, -19.908 )
rotation = -1.44587
shape = SubResource( 3 )

[node name="HitBoxDamage" type="Area2D" parent="GenericCharacter" groups=[
"enemy",
]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GenericCharacter/HitBoxDamage"]
shape = SubResource( 4 )

[node name="Shooter" type="Node2D" parent="."]
script = ExtResource( 4 )
[connection signal="timeout" from="GenericCharacter/FreeDeadNode" to="GenericCharacter" method="_on_FreeDeadNode_timeout"]
[connection signal="timeout" from="GenericCharacter/Shoot" to="GenericCharacter" method="_on_Shoot_timeout"]
[connection signal="body_entered" from="GenericCharacter/PlayerDetector" to="GenericCharacter" method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="GenericCharacter/PlayerDetector" to="GenericCharacter" method="_on_PlayerDetector_body_exited"]

[editable path="GenericCharacter"]
